# ionpak-thermostat

./: channel-rust-nightly.toml  default.nix  shell.nix
firmware/: Cargo.toml  README.md  build.rs  openocd.cfg
firmware/src/: ad7172.rs  board.rs  command_parser.rs  ethmac.rs  main.rs  pid.rs  session.rs  steinhart_hart.rs  tec.rs
firmware/src/ad7172/: adc.rs  checksum.rs  mod.rs  regs.rs
firmware/src/board/: delay.rs  gpio.rs  mod.rs  pwm.rs  softspi.rs  systick.rs
