[package]
name = "ionpak-firmware"
version = "1.0.0"
authors = ["whitequark <whitequark@whitequark.org>"]
edition = "2018"

[build-dependencies]
walkdir = "1.0"

[dependencies]
libm = "0.1.2"
cortex-m = { version = "0.5", features = ["const-fn"] }
cortex-m-rt = "0.6"
crc = { version = "1.7", default-features = false }
tm4c129x = { version = "0.8", features = ["rt"] }
embedded-hal = { version = "0.2", features = ["unproven"] }
nb = "0.1"
cortex-m-semihosting = "0.3"
byteorder = { version = "1.3", default-features = false }
bit_field = "0.10"
bare-metal = "0.2"
#lexical-core = { version = "~0.6", default-features = false }
# TODO: pending https://github.com/Alexhuszagh/rust-lexical/pull/25
lexical-core = { git = "https://github.com/astro/rust-lexical.git", default-features = false }
nom = { version = "~5", default-features = false }

[dependencies.smoltcp]
git = "https://github.com/m-labs/smoltcp"
rev = "cd893e6"
features = ["proto-ipv4", "socket-tcp"]
default-features = false

[dependencies.compiler_builtins]
git = "https://github.com/rust-lang-nursery/compiler-builtins"
default-features = false
features = ["mem", "no-lang-items", "c"]

[profile.release]
lto = true
debug = true
