[package]
name = "firmware"
version = "1.0.0"
authors = ["whitequark <whitequark@whitequark.org>"]
edition = "2018"

[build-dependencies]
walkdir = "1.0"

[dependencies]
libm = "0.1.4"
cortex-m = { version = "0.5", features = ["const-fn"] }
cortex-m-rt = "0.6"
crc = { version = "1.7", default-features = false }
tm4c129x = { version = "0.8", features = ["rt"] }
embedded-hal = { version = "0.2", features = ["unproven"] }
nb = "0.1"
cortex-m-semihosting = "0.3"
byteorder = { version = "1.3", default-features = false }
bit_field = "0.10"
bare-metal = "0.2"
lexical-core = { version = "~0.6.1", default-features = false }
nom = { version = "~5", default-features = false }

[dependencies.smoltcp]
git = "https://github.com/m-labs/smoltcp.git"
rev = "0fedb1db9aa26712830822dd61f065deaa34d611"
features = ["ethernet", "proto-ipv4", "socket-tcp"]
default-features = false

[dependencies.compiler_builtins]
version = "0.1"
default-features = false
features = ["mem", "no-lang-items", "c"]

[profile.release]
lto = true
debug = true
